--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
+<!DOCTYPE HTML5>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Esto es una prueba d git</title>Prueba</title>
-    </head>
-        <body>
-           probando cambio de rama 
-        </body>
+	<head>
+		<title>Ejercicios Git</title>
+		<meta charset="utf-8">
+		<meta name="description" content="Ejercicios git">
+		<meta name="keywords" content="Ejercicios, git">
+	</head>
+	<body>
+		<table border='1' style='width: 100%'>
+			<caption>Titulo de tabla</caption>
+			<colgroup>
+				<col style="width: 20%"/>
+				<col style="width: 40%"/>
+				<col style="width: 40%"/>
+			</colgroup>
+			<thead>
+				<tr>
+					<th rowspan="2">Nombres</th>
+					<th colspan="2">Ocupación</th>
+				</tr>
+				<tr>
+					<th>Estudiante</th>
+					<th>Empleado</th>
+				</tr>
+			</thead>
+			<tfoot>
+				
+			</tfoot>
+			<tbody>
+				<tr>
+					<th>Mariana</th>
+					<td>Si</td>
+					<td>Si</td>
+				</tr>
+				<tr>
+					<th>Ana María</th>
+					<td>Si</td>
+					<td>No</td>
+                </tr>
+                <tr>
+					<th>Ana María</th>
+					<td>si</td>
+					<td>no</td>
+				</tr>
+			</tbody>
+		</table>
+	</body>
 </html>
