cambios en tabla

--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
 					<td>No</td>
                 </tr>
                 <tr>
-					<th>Ana María</th>
-					<td>si</td>
-					<td>no</td>
+					<th>Cristina</th>
+					<td>Si</td>
+					<td>No</td>
+				</tr>
+				<tr>
+					<th>Lucía</th>
+					<td>Si</td>
+					<td>Si</td>
 				</tr>
 			</tbody>
 		</table>
