tratar de guardar mismo cambio

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 					<td>Si</td>
 					<td>No</td>
 				</tr>
+				<tr>
+					<th>Eliana</th>
+					<td>Si</td>
+					<td>Si</td>
+				</tr>
 			
 			</tbody>
 		</table>
