--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<td>No</td>
 				</tr>
 				<tr>
-					<th>Mariela</th>
+					<th>Gabriela</th>
 					<td>Si</td>
 					<td>Si</td>
 				</tr>
