--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 				<tr>
 					<th rowspan="2">Nombres</th>
 					<th colspan="2">Ocupación</th>
+                                        <th colspan="2">Edad</>
 				</tr>
 				<tr>
 					<th>Estudiante</th>
 					<th>Empleado</th>
+                                        <th>Edad</>
 				</tr>
 			</thead>
 			<tfoot>
@@ -32,21 +34,25 @@
 					<th>Mariana</th>
 					<td>Si</td>
 					<td>Si</td>
+                                        <td>24</td>
 				</tr>
 				<tr>
 					<th>Ana María</th>
 					<td>Si</td>
 					<td>No</td>
+                                        <td>19</td>
                 </tr>
                 <tr>
 					<th>Cristina</th>
 					<td>Si</td>
 					<td>No</td>
+                                        <td>21</>
 				</tr>
 				<tr>
 					<th>Gabriela</th>
 					<td>Si</td>
 					<td>Si</td>
+                                        <td>22</td>
 				</tr>
 			
 			</tbody>
