--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 					<th rowspan="2">Nombres</th>
 					<th colspan="2">Ocupación</th>
                                         <th colspan="2">Edad</>
+                                        <th colspan="2">Telefono</th>
 				</tr>
 				<tr>
 					<th>Estudiante</th>
 					<th>Empleado</th>
-                                        <th>Edad</>
+                                        <th>Edad</th>
+                                        <th>Celular</th>
 				</tr>
 			</thead>
 			<tfoot>
@@ -35,24 +37,28 @@
 					<td>Si</td>
 					<td>Si</td>
                                         <td>24</td>
+                                        <td>3657890</td>
 				</tr>
 				<tr>
 					<th>Ana María</th>
 					<td>Si</td>
 					<td>No</td>
                                         <td>19</td>
+                                        <td>3012708967</td>
                 </tr>
                 <tr>
 					<th>Cristina</th>
 					<td>Si</td>
 					<td>No</td>
                                         <td>21</>
+                                        <td>3154707511</td>
 				</tr>
 				<tr>
 					<th>Gabriela</th>
 					<td>Si</td>
 					<td>Si</td>
                                         <td>22</td>
+                                        <td>3568902</td>
 				</tr>
 			
 			</tbody>
