--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 				<col style="width: 20%"/>
 				<col style="width: 40%"/>
 				<col style="width: 40%"/>
+                                <col style="width: 30%"/>
+                                <col style="width: 40%"/>
+                                <col style="width: 40%"/>
 			</colgroup>
 			<thead>
 				<tr>
@@ -20,12 +23,14 @@
 					<th colspan="2">Ocupación</th>
                                         <th colspan="2">Edad</>
                                         <th colspan="2">Telefono</th>
+                                        <th colspan="2">Estado civil</>
 				</tr>
 				<tr>
 					<th>Estudiante</th>
 					<th>Empleado</th>
                                         <th>Edad</th>
                                         <th>Celular</th>
+                                        <th>soltera/o</th>
 				</tr>
 			</thead>
 			<tfoot>
@@ -38,6 +43,7 @@
 					<td>Si</td>
                                         <td>24</td>
                                         <td>3657890</td>
+                                        <td>No</th>
 				</tr>
 				<tr>
 					<th>Ana María</th>
@@ -45,6 +51,7 @@
 					<td>No</td>
                                         <td>19</td>
                                         <td>3012708967</td>
+                                        <td>Si</td>
                 </tr>
                 <tr>
 					<th>Cristina</th>
@@ -52,6 +59,7 @@
 					<td>No</td>
                                         <td>21</>
                                         <td>3154707511</td>
+                                        <td>Si</td>
 				</tr>
 				<tr>
 					<th>Gabriela</th>
@@ -59,6 +67,7 @@
 					<td>Si</td>
                                         <td>22</td>
                                         <td>3568902</td>
+                                        <td>Si</td>
 				</tr>
 			
 			</tbody>
